// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders different Colours 1`] = `
Array [
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM cCAOww"
      color="bulma.100"
      size="medium"
    >
      <svg
        className="sc-bkEOxz ejwoNe"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
          stroke="currentColor"
        />
      </svg>
    </div>
  </div>,
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM ilVgNF"
      color="goten.100"
      size="medium"
    >
      <svg
        className="sc-bkEOxz hHKlFu"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
          stroke="currentColor"
        />
      </svg>
    </div>
  </div>,
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM gHDNTP"
      color="goten.100"
      size="medium"
    >
      <svg
        className="sc-bkEOxz hHKlFu"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
          stroke="currentColor"
        />
      </svg>
    </div>
  </div>,
]
`;

exports[`Avatar renders different Sizes 1`] = `
Array [
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM XUOqU"
        color="bulma.100"
        size="xsmall"
      >
        <svg
          className="sc-bkEOxz ejwoNe"
          fill="none"
          fontSize="1rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
            stroke="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM dCiRVr"
        color="bulma.100"
        size="small"
      >
        <svg
          className="sc-bkEOxz ejwoNe"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
            stroke="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM cCAOww"
        color="bulma.100"
        size="medium"
      >
        <svg
          className="sc-bkEOxz ejwoNe"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
            stroke="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM bebUwJ"
        color="bulma.100"
        size="large"
      >
        <svg
          className="sc-bkEOxz ejwoNe"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
            stroke="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM fEsXN"
        color="bulma.100"
        size="xlarge"
      >
        <svg
          className="sc-bkEOxz ejwoNe"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
            stroke="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM kEglPz"
        color="bulma.100"
        size="twoxlarge"
      >
        <svg
          className="sc-bkEOxz ejwoNe"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
            stroke="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>,
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM XUOqU"
        color="bulma.100"
        size="xsmall"
      >
        JS
      </div>
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM dCiRVr"
        color="bulma.100"
        size="small"
      >
        JS
      </div>
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM cCAOww"
        color="bulma.100"
        size="medium"
      >
        JS
      </div>
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM bebUwJ"
        color="bulma.100"
        size="large"
      >
        JS
      </div>
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM fEsXN"
        color="bulma.100"
        size="xlarge"
      >
        JS
      </div>
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM kEglPz"
        color="bulma.100"
        size="twoxlarge"
      >
        JS
      </div>
    </div>
  </div>,
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM UTAAE"
        color="bulma.100"
        size="xsmall"
      />
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM kbyyvH"
        color="bulma.100"
        size="small"
      />
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM jfkaKw"
        color="bulma.100"
        size="medium"
      />
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM eEdSxN"
        color="bulma.100"
        size="large"
      />
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM fuTTHp"
        color="bulma.100"
        size="xlarge"
      />
    </div>
    <div
      className="sc-fEcDHC cqZLmn"
    >
      <div
        className="sc-frbSaM btOvWL"
        color="bulma.100"
        size="twoxlarge"
      />
    </div>
  </div>,
]
`;

exports[`Avatar renders different Variants 1`] = `
Array [
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM cCAOww"
      color="bulma.100"
      size="medium"
    >
      <svg
        className="sc-bkEOxz ejwoNe"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
          stroke="currentColor"
        />
      </svg>
    </div>
  </div>,
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM cCAOww"
      color="bulma.100"
      size="medium"
    >
      JS
    </div>
  </div>,
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM jfkaKw"
      color="bulma.100"
      size="medium"
    />
  </div>,
]
`;

exports[`Avatar supports different status origins 1`] = `
Array [
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM cCAOww"
      color="bulma.100"
      size="medium"
    >
      <svg
        className="sc-bkEOxz ejwoNe"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
          stroke="currentColor"
        />
      </svg>
    </div>
    <div
      className="sc-cHHTbD irdraI"
      size="medium"
    />
  </div>,
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM cCAOww"
      color="bulma.100"
      size="medium"
    >
      <svg
        className="sc-bkEOxz ejwoNe"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
          stroke="currentColor"
        />
      </svg>
    </div>
    <div
      className="sc-cHHTbD hrBdNT"
      size="medium"
    />
  </div>,
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM cCAOww"
      color="bulma.100"
      size="medium"
    >
      <svg
        className="sc-bkEOxz ejwoNe"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
          stroke="currentColor"
        />
      </svg>
    </div>
    <div
      className="sc-cHHTbD dJJGCg"
      size="medium"
    />
  </div>,
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM cCAOww"
      color="bulma.100"
      size="medium"
    >
      <svg
        className="sc-bkEOxz ejwoNe"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
          stroke="currentColor"
        />
      </svg>
    </div>
    <div
      className="sc-cHHTbD XuJmn"
      size="medium"
    />
  </div>,
]
`;

exports[`Avatar supports different statuses 1`] = `
Array [
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM cCAOww"
      color="bulma.100"
      size="medium"
    >
      <svg
        className="sc-bkEOxz ejwoNe"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
          stroke="currentColor"
        />
      </svg>
    </div>
  </div>,
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM cCAOww"
      color="bulma.100"
      size="medium"
    >
      <svg
        className="sc-bkEOxz ejwoNe"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.384 10.885a4.385 4.385 0 11-8.77 0 4.385 4.385 0 018.77 0zM16 25.5c4.343 0 6.845-1.12 8.006-1.841.543-.338.81-.96.755-1.603-.075-.879-.382-1.757-.695-2.453-.41-.914-1.36-1.41-2.363-1.41H10.296c-1.003 0-1.953.496-2.364 1.41-.312.696-.62 1.574-.695 2.453-.055.644.213 1.265.756 1.603 1.16.72 3.663 1.841 8.006 1.841z"
          stroke="currentColor"
        />
      </svg>
    </div>
    <div
      className="sc-cHHTbD dJJGCg"
      size="medium"
    />
  </div>,
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM jfkaKw"
      color="bulma.100"
      size="medium"
    />
  </div>,
  <div
    className="sc-fEcDHC cqZLmn"
  >
    <div
      className="sc-frbSaM jfkaKw"
      color="bulma.100"
      size="medium"
    />
    <div
      className="sc-cHHTbD dJJGCg"
      size="medium"
    />
  </div>,
]
`;
